<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="abhijith.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/portfolio_title"
        android:id="@+id/portfolioTitle"
        android:textStyle="bold|italic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="7dp"
        android:id="@+id/spotifyStreamer"
        android:background="@drawable/button_bg"
        android:layout_above="@+id/scoresApp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:onClick="spotifyClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_marginBottom="7dp"
        android:text="@string/scores_app"
        android:id="@+id/scoresApp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/libraryApp"
        android:layout_centerHorizontal="true"
        android:onClick="scoresClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/libraryApp"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/button_bg"
        android:layout_marginRight="20dp"
        android:layout_above="@+id/buildItBigger"
        android:layout_centerHorizontal="true"
        android:onClick="libraryClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/buildItBigger"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="builditbiggerClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/xyzReader"
        android:layout_marginTop="7dp"
        android:background="@drawable/button_bg"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/buildItBigger"
        android:layout_centerHorizontal="true"
        android:onClick="xyzClick"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:background="@color/orange"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_below="@+id/xyzReader"
        android:layout_centerHorizontal="true"
        android:onClick="capstoneClick"/>
</RelativeLayout>
